[project]
name = "challenge-6"
version = "0.1.0"
description = ""
authors = [
    {name = "vydi", email = "jairo.barrerau2@gmail.com"}
]
# This line caps the max Python version to satisfy Triton and skips 3.14.1 for TorchVision
requires-python = ">=3.12, <3.15, !=3.14.1"

dependencies = [
    "torch (>=2.12.0,<2.13.0)",
    "torchvision (>=0.27.0,<0.28.0)",
    "umap-learn (>=0.5.12,<0.6.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"